# voice-ai-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  AGENTS.md  README.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  livekit.yaml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: ci.yml
.scratch/ergo-triage/: PRD.md
.scratch/ergo-triage-clinician-finder/: PRD.md
.scratch/ergo-triage-clinician-finder/issues/: 01-add-specialist-mapping-fields-to-condition.md  02-core-clinician-nominatim-overpass-plumbing.md  03-find-clinician-tool-and-agent-prompt-integration.md  04-clinician-suggestions-frontend-component.md  05-safety-eval-bypass-blocking-scripts.md
.scratch/ergo-triage-recall/: PRD.md
.scratch/ergo-triage-recall/issues/: 01-capture-identified-condition-and-recall-context.md  02-inject-prior-session-recall-into-system-prompt.md
.scratch/ergo-triage/issues/: 01-triage-pivot-tracer.md  02-opqrst-symptom-tracking.md  03-grounded-treatment-recommendation.md  04-safety-regex-screen-and-escalate.md  05-safety-events-audit-log.md  06-safety-classifier-gpt4o-mini.md  07-safety-eval-harness.md
.scratch/sarjy/: PRD.md
.scratch/sarjy-product-polish/: PRD.md
.scratch/sarjy-product-polish/issues/: 01-sarjy-rebrand-and-first-time-intro.md  02-returning-user-disclaimer-branching.md  03-english-only-language-rule.md  04-semantic-vad-low-eagerness.md  05-session-end-topic-and-end-of-call-card.md
.scratch/sarjy/issues/: 01-monorepo-skeleton.md  02-tooling-and-ci-lint.md  03-docker-scaffolding.md  04-auth-tracer.md  05-voice-loop-tracer.md  06-tool-calling-tracer.md  07-structured-preferences-tracer.md  08-episodic-memory-tracer.md  09-conversation-persistence-tracer.md  10-settings-page-tracer.md  11-ttfa-logging-tracer.md  12-supabase-token-livekit-metadata.md  13-jwks-jwt-verification.md  14-cost-and-abuse-guardrails.md  15-conversation-end-runs-before-messages-persist.md  16-history-detail-route-missing-outlet.md
.scratch/triage-conversation-polish/issues/: 01-sarjy-speaks-first.md  02-model-escalate-ends-conversation.md  03-rename-call-to-conversation.md
.scratch/voice-ai-template/: PRD.md
.scratch/voice-ai-template/issues/: 01-monorepo-skeleton.md  02-tooling-and-ci-lint.md  03-docker-scaffolding.md  04-auth-tracer.md  05-voice-loop-tracer.md  06-tool-calling-tracer.md  07-structured-preferences-tracer.md  08-episodic-memory-tracer.md  09-conversation-persistence-tracer.md  10-settings-page-tracer.md  11-ttfa-logging-tracer.md  12-supabase-token-livekit-metadata.md  13-jwks-jwt-verification.md  14-cost-and-abuse-guardrails.md  15-conversation-end-runs-before-messages-persist.md  16-history-detail-route-missing-outlet.md
apps/agent/: .dockerignore  Dockerfile  package.json  pyproject.toml
apps/agent/agent/: __main__.py  session.py
apps/agent/tests/: conftest.py
apps/agent/tests/integration/: test_session_clinician.py  test_session_memory.py  test_session_model_escalate.py  test_session_opener.py  test_session_persistence.py  test_session_preferences.py  test_session_recall.py  test_session_safety.py  test_session_tools.py  test_session_triage.py
apps/agent/tests/unit/: test_session.py
apps/api/: Dockerfile  openapi.json  package.json  pyproject.toml
apps/api/api/: __init__.py  app.py  main.py  middleware.py  routes.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: test_conversations.py  test_health.py  test_livekit_token.py  test_me.py  test_memories.py  test_preferences.py  test_prior_session_status.py
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
apps/web/src/: App.tsx  index.css  index.ts  main.tsx  routeTree.gen.ts
apps/web/src/__tests__/: ClinicianSuggestions.test.tsx  ConversationView.test.tsx  EndOfCallCard.test.tsx  EndOfConversationCard.test.tsx  HistoryList.test.tsx  HistoryRoutes.test.tsx  HomeRoute.test.tsx  MemorySidebar.test.tsx  SessionEndSignal.test.tsx  Settings.test.tsx  SignIn.test.tsx  TalkPage.test.tsx  TriageSlots.test.tsx
apps/web/src/api/: types.gen.ts
apps/web/src/components/: app-header.tsx  brand.tsx  clinician-suggestions.tsx  end-of-call-card.tsx  end-of-conversation-card.tsx  home.tsx  memory-sidebar.tsx  sarjy-home.tsx  sarjy-logo.tsx  session-summary.tsx  settings-form.tsx  sign-in-form.tsx  talk-page.tsx  theme-switcher.tsx  transcript-card.tsx  triage-home.tsx  triage-slots.tsx  voice-dot.tsx
apps/web/src/lib/: api.ts  auth.tsx  livekit-data-channel.ts  livekit-session-end.ts  livekit-transcript.ts  livekit-triage-state.ts  supabase.ts  theme.ts  use-session-snapshot.ts  use-viewport.ts  use-voice-session.ts  use-voice-state.ts  utils.ts  voice-options.ts
apps/web/src/routes/: __root.tsx  history.$id.tsx  history.index.tsx  history.tsx  index.tsx  session-end.tsx  settings.tsx  sign-in.tsx
docs/: GOTCHAS.md  architecture.md  design-brief.md
docs/adr/: 0001-livekit-agents-as-realtime-framework.md  0002-pattern-c-shared-core-package.md  0003-supabase-with-row-level-security.md  0004-hybrid-memory-structured-prefs-plus-mem0.md  0005-jwks-asymmetric-jwt-verification.md  0006-remove-settings-page.md  0007-tts-attached-safety-escalation.md
docs/agents/: domain.md  triage-labels.md
supabase/: .gitignore  config.toml
supabase/migrations/: 0000_init.sql  0001_user_preferences.sql  0002_conversations.sql  0003_mem0_memories.sql  0004_safety_events.sql  0005_conversations_recall.sql  0006_safety_events_model_source.sql
tests/safety/: README.md  conftest.py  runner.py  test_safety_suite.py
tests/safety/scripts/adversarial/: 01_medication_dosage.json  02_demand_diagnosis.json  03_out_of_scope_diagnosis.json  04_low_confidence_pressure.json  05_unsourced_protocol.json  06_off_scope_bypass.json  07_premature_offer.json
tests/safety/scripts/drift/: 01_mental_health.json  02_pregnancy.json  03_paediatric.json  04_post_surgical.json  05_chronic_persistent.json
(+17 files in other folders)
