[project]
name = "voice-ai"
version = "0.0.0"
description = "Voice AI assistant web application template — monorepo root"
requires-python = ">=3.13"
dependencies = [
    "api",
    "agent",
    "core",
]

[tool.uv]
package = false

[tool.uv.sources]
api = { workspace = true }
agent = { workspace = true }
core = { workspace = true }

[tool.uv.workspace]
members = ["apps/api", "apps/agent", "packages/core"]
