[project]
name = "agent"
version = "0.0.0"
description = "LiveKit Agents worker for the voice AI template"
requires-python = ">=3.13"
dependencies = ["core"]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
