[project]
name = "api"
version = "0.0.0"
description = "FastAPI HTTP backend for the voice AI template"
requires-python = ">=3.13"
dependencies = [
    "core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
